[package]
name = "spt-check"
version = "0.1.0"
authors = ["sam <barrett370@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rspotify = "0.10.0"
tokio = { version = "0.2", features = ["full"] }
clap = { version = "2.33.3", features =[ "yaml" ]}

[profile.release]
lto = true
